--- a/src/lab/exp9/theory.html
+++ b/src/lab/exp9/theory.html
@@ -9,12 +9,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<link href="default.css" media="screen" rel="stylesheet" type="text/css"/>
 		<script src="jqminmax.js" type="text/javascript"></script>
 	</head>
-	<body><!--Google Tag Manager (noscript)--><noscript class="gtm"><iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-W59SWTR" style="display:none;visibility:hidden" width="0"></iframe></noscript><!--End Google Tag Manager (noscript)-->
+	<body><!--Google Tag Manager (noscript)--><noscript class="gtm"><iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-W59SWTR" style="display:none;visibility:hidden" width="0"></iframe></noscript><!--End Google Tag Manager (noscript)-->http://vlab.co.in/
 		<header id="site_head">
 		<div class="header_cont"> <!-- 960px header-->
 			<!-- LOGO of the company-->
 			<div id="logo">
-			<h1> <a href="index.html"> Virtual Labs </a> </h1>
+			<h1> <a href="http://vlab.co.in/"> Virtual Labs </a> </h1>
 			</div>
 			<div id="help-menu">
 			<!--h1> <a href="../help/index.html"> Help </a> </h1-->
